[package]
name = "easy_yolo"
version = "0.2.0"
edition = "2021"
description = "onnxruntime models for rust examples."
[dependencies]
usls = { version = "0.0.20", features = ["auto"] }
clap = { version = "4.5.23", features = ["derive"] }
anyhow = { version = "1.0.94" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# ndarray = { version = "0.16.1", features = ["rayon"] }
# regex = { version = "1.5.4" }
# rand = { version = "0.8.5" }
# chrono = { version = "0.4.30" }
# half = { version = "2.3.1" }
# dirs = { version = "5.0.1" }
# ureq = { version = "2.9.1", default-features = true, features = [
#     "socks-proxy",
# ] }
# tokenizers = { version = "0.15.2" }
# rayon = "1.10.0"
# indicatif = "0.17.8"
# image = "0.25.2"
# imageproc = { version = "0.24" }
# ab_glyph = "0.2.23"
# geo = "0.28.0"
# prost = "0.12.4"
# fast_image_resize = { version = "4.2.1", features = ["image"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tempfile = "3.12.0"
# video-rs = { version = "0.9.0", features = ["ndarray"] }
# natord = "1.0.9"

# minifb = "0.27.0"

# [dev-dependencies]
# criterion = "0.5.1"

# [[bench]]
# name = "yolo"
# harness = false

# [lib]
# bench = false
