[package]
name = "easy_yolo"
version = "0.2.0"
edition = "2024"
description = "onnxruntime models for rust examples."
[dependencies]
usls = { version = "0.0.20", features = ["auto"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = { version = "1.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

