[package]
name = "easy_yolo"
version = "0.3.0"
edition = "2024"
description = "onnxruntime models for rust examples."
[dependencies]
usls = { version = "0.1.0-beta.1",features = ["cuda"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = { version = "1.0" }
tracing = "0.1"
argh = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
ort = { version = "2.0.0-rc.9", default-features = false, optional = true , features = [
   "ndarray", 
   "cuda",
   "copy-dylibs", 
   "half"
]}
video-rs = { version = "0.10.3", features = ["ndarray"], optional = true }
[features]
default = ["ort-download-binaries"]
ort-download-binaries = ["ort", "ort/download-binaries"]
ort-load-dynamic = ["ort", "ort/load-dynamic"]
cuda = ["ort/cuda"]
# trt = ["ort/tensorrt"]
# mps = ["ort/coreml"]
video = ["dep:video-rs"]
